z-index fix

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -30,7 +30,7 @@
   border-radius: 1rem;
   padding: 1rem;  
   line-height: 1.5rem;
-  opacity: 95%;
+  /* opacity: 95%; */
   font-weight: bolder;
   z-index: 5;
   box-shadow: 0 0 3px 0px #000000;
@@ -76,6 +76,7 @@ color:#29BE83;
   padding: 0;
   font-weight: bolder;
   word-wrap: normal;
+  z-index: 6;
 }
 .nav-link:hover{
   color:#000000;
